2007-10-28  Matthias Hartmann  <hartmann.matthias@gmail.com>

	* po/de.po: Updated german translation.

2007-10-28  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/gui/widgets/layout.h, src/gui/widgets/layout.cpp: Separated
	auto-resizing into two categories: "set" and "add".
	* src/gui/sell.cpp, src/gui/inventorywindow.cpp, src/gui/buy.cpp:
	Removed useless code. Updated constant names.
	* src/gui/trade.cpp, src/gui/trade.h: Converted to layout handler.
	Fixed money handling. Fixed transaction handling.
	* src/net/tradehandler.cpp, src/net/gameserver/player.h,
	src/net/gameserver/player.cpp: Implemented missing trade messages.
	* po/POTFILES.in: Marked trade window as translatable.
	* po/tmw.pot, po/*.po: Updated translation objects.
	* po/fr.po: Updated French translation.

2007-10-28  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/gui/debugwindow.cpp, tmw.cbp: Fixed coordinates in the debug
	window and updated project file.

2007-10-28  Philipp Sehmisch  <tmw@crushnet.org>

	* src/gui/textfield.cpp: Fixed a windows compilation problem
	caused by a define macro of the Windows API that conflicts
	with a guichan identifier. 

2007-10-27  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/properties.h, src/game.cpp, src/channel.h, src/log.cpp,
	src/gui/window.cpp, src/gui/setup.cpp, src/gui/button.cpp,
	src/gui/chat.h, src/gui/widgets/dropdown.cpp, src/gui/chat.cpp,
	src/gui/tabbedcontainer.cpp, src/gui/windowcontainer.cpp,
	src/gui/skill.cpp, src/gui/serverdialog.cpp, src/gui/textfield.cpp,
	src/gui/playerbox.cpp, src/gui/scrollarea.cpp, src/beingmanager.cpp,
	src/flooritemmanager.cpp, src/channelmanager.cpp, src/main.cpp,
	src/particle.cpp, src/net/messageout.cpp, src/channel.cpp,
	src/localplayer.h, src/resources/imageset.cpp,
	src/resources/buddylist.cpp, src/resources/monsterinfo.h,
	src/resources/iteminfo.h, src/resources/monsterdb.cpp,
	src/resources/monsterinfo.cpp, src/resources/itemdb.cpp: Fixed missing